Use Java 8 features.